# obs-c

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/obsc/: constants.h  context.h  debug.h  event.h  file_mapping.h  graphics_offsets.h  hook_info.h  mutex.h  obsc.h  pipe.h  toml11.h  utils.h
src/: event.cpp  mutex.cpp  obsc.cpp  pipe.cpp  utils.cpp
